--- a/css/calendar.core.css
+++ b/css/calendar.core.css
@@ -21,7 +21,7 @@
 /* ========== Base Styles ========== */
 body {
     font-family: var(--core-font-family);
-    background-color: #237eda;
+    background-color: #3c8ad7;
     /* Soft light gray background */
     color: #2d3748;
     /* Softer dark gray for text */
